# Kenku

./: pyproject.toml
kenku_nb/: 01_test_notebook.ipynb
